Fix pagine per html (eliminazione elementi ionic)

--- a/src/app/pages/ammortamento/ammortamento.page.html
+++ b/src/app/pages/ammortamento/ammortamento.page.html
@@ -12,7 +12,19 @@
     </ion-toolbar>
 </ion-header>
 
-<ion-content class="body">
+<div class="main-header">
+    <div class="logo"></div>
+    <div class="header-bar">
+        <img src="/assets/img/readvice-logo@2x.png" class="title">
+    </div>
+    <div class="tools">
+        <a href="#" class="hints tasks"><span>10</span></a>
+        <a href="#" class="hints alerts"><span>10</span></a>
+        <a href="#" class="user">alessandro.tamborini@readvice.it</a>
+    </div>
+</div>
+
+<div class="main-body body">
     <div class="content-area">
         <div class="tool-area">
             <div class="tool-table">
@@ -667,4 +679,4 @@
             </div>
         </div>
     </div>
-</ion-content>
+</div>
