--- a/src/app/pages/client-home/client-home.page.html
+++ b/src/app/pages/client-home/client-home.page.html
@@ -1,13 +1,13 @@
-<ion-header no-border no-padding no-margin class="client">
-    <ion-toolbar color="bar" no-padding no-margin>
-        <ion-buttons slot="start" class="hamburger left-side-element" no-padding no-margin> </ion-buttons>
-        <ion-title text-left class="header-bar" style="padding-right: 0;">
-            <a href="#" class="client-area">Patrimonio</a>
-        </ion-title>
-    </ion-toolbar>
-</ion-header>
+<div class="main-header client">
+    <div class="hamburger"> </div>
+    <div class="header-bar" style="padding-right: 0;">
+        <a href="#" class="client-area">Patrimonio</a>
+    </div>
+</div>
 
-<ion-content class="body client">
+
+
+<div class="main-body client">
     <div class="left-menu left-side-element " style="display: none;">
         <ion-buttons slot="start" class="logo left-side-element" no-padding no-margin> </ion-buttons>
         <div class="base">
@@ -67,4 +67,4 @@
             </div>
         </div>
     </div>
-</ion-content>
+</div>
