--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -1,193 +1,1 @@
-<ion-header no-border no-padding no-margin>
-    <ion-toolbar color="primary" no-padding no-margin>
-        <ion-buttons slot="start" class="logo" no-padding no-margin routerLink="/home" routerDirection="root">
-            sfsfsd
-        </ion-buttons>
-        <ion-title text-left>
-            <h4 class="title">Ionic Blank<br><small>dsfsdf</small></h4>
-        </ion-title>
-    </ion-toolbar>
-</ion-header>
-
-<ion-content>
-    <div class="left-menu">
-        <div class="base">
-            <ul>
-                <li>
-                    <div routerLink="/dashboard" routerDirection="root">sd</div>
-                </li>
-                <li>
-                    <div>sd</div>
-                </li>
-                <li>
-                    <div>sd</div>
-                </li>
-                <li>
-                    <div>sd</div>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <div class="content-area">
-        <div class="tool">text</div>
-        <div class="content">
-            <div class="scheda">scheda</div>
-
-        </div>
-    </div>
-    <div class="right-area">
-        <div class="header">area</div>
-        <div class="list">
-            <ul>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-                <li>
-                    <div>sdfsdfsdfsdfsd</div>
-                </li>
-            </ul>
-        </div>
-        <div class="footer"></div>
-    </div>
-</ion-content>
+<div>OLD</div>
