--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,4 +1,4 @@
-<ion-header no-border no-padding no-margin>
+<!--<ion-header no-border no-padding no-margin>
   <ion-toolbar color="bar" no-padding no-margin>
     <ion-buttons slot="start" class="logo left-side-element"  no-padding no-margin> </ion-buttons>
     <ion-title text-left class="header-bar">
@@ -9,10 +9,22 @@
         <a href="#" class="hints alerts"><span>10</span></a>
         <a href="#" class="user">alessandro.tamborini@readvice.it</a>
     </ion-buttons>
-  </ion-toolbar>
-</ion-header>
+</ion-toolbar>
+</ion-header>-->
 
-<ion-content class="body">
+<div class="main-header">
+    <div class="logo"></div>
+    <div class="header-bar">
+        <img src="/assets/img/readvice-logo@2x.png" class="title">
+    </div>
+    <div class="tools">
+        <a href="#" class="hints tasks"><span>10</span></a>
+        <a href="#" class="hints alerts"><span>10</span></a>
+        <a href="#" class="user">alessandro.tamborini@readvice.it</a>
+    </div>
+</div>
+
+<div class="main-body body">
     <div class="content-area">
         <div class="tool-area">
             <div class="tool-table">
@@ -299,4 +311,4 @@
             </div>
         </div>
     </div>
-</ion-content>
+</div>
