--- a/src/app/pages/ammortamento/ammortamento.page.html
+++ b/src/app/pages/ammortamento/ammortamento.page.html
@@ -1,4 +1,4 @@
-<ion-header no-border no-padding no-margin>
+<!-- <ion-header no-border no-padding no-margin>
     <ion-toolbar color="bar" no-padding no-margin>
         <ion-buttons slot="start" class="logo left-side-element" no-padding no-margin> </ion-buttons>
         <ion-title text-left class="header-bar">
@@ -10,7 +10,7 @@
             <a href="#" class="user">alessandro.tamborini@readvice.it</a>
         </ion-buttons>
     </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
 <div class="main-header">
     <div class="logo"></div>
