- Aggiunte nella libreria tutte le chiamate che sono elencate nel documento dei servizi (escluse quelle delle sezioni segnate come DA DEFINIRE) - spostato l'handler degli errori, dalla cartella dei servizi, alla cartella apposita degli handler

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -268,7 +268,7 @@
                     <div class="indirizzo">Via F.lli Rosselli, 7<br>57100 Cecina (LI)</div>
                     <div class="tipologia table">
                         <div class="row">
-                            <div class="cell commerciale">
+                            <div class="cell    ">
                             </div>
                         </div>
                     </div>
