Correzioni su modelli immobili.

--- a/src/app/pages/scheda-immobile/scheda-immobile.page.html
+++ b/src/app/pages/scheda-immobile/scheda-immobile.page.html
@@ -30,8 +30,10 @@
             <div class="tool-table">
                 <div class="tool-row">
                     <div class="tool">
-                        <a href="#" class="button back only-icon">&nbsp;</a> <h3 class="page-title cliente">Francesca Palmi - Immobile</h3>
-                        <div style="float: right"><a href="#" class="button view">Catastali</a><a href="#" class="button edit">Modifica</a></div>
+                        <a href="#" class="button back only-icon">&nbsp;</a>
+                        <h3 class="page-title cliente">Francesca Palmi - Immobile</h3>
+                        <div style="float: right"><a href="#" class="button view">Catastali</a><a href="#"
+                                class="button edit">Modifica</a></div>
                     </div>
                 </div>
             </div>
@@ -51,7 +53,8 @@
                     <div class="scheda-table">
                         <div class="scheda-row">
                             <div class="item">
-                                <div class="item-title">Abitazioni <a href="#" class="button view only-icon">&nbsp;</a></div>
+                                
+                                <h3 class="item-title">Proprietà: <span>500K</span></h3>
                                 <ul class="item-list half-height">
                                     <li><span>Elemento</span><span>valore</span></li>
                                     <li><span>Elemento</span><span>valore</span></li>
@@ -68,7 +71,7 @@
                                 </ul>
                             </div>
                             <div class="item">
-                                <h3 class="item-title">Abitazioni <span>500K</span></h3>
+                                    <div class="item-title">Mutuo: <a href="#" class="button view only-icon">&nbsp;</a></div>
                                 <ul class="item-list half-height">
                                     <li><span>Elemento</span><span>valore</span></li>
                                     <li><span>Elemento</span><span>valore</span></li>
@@ -78,7 +81,7 @@
                         </div>
                         <div class="scheda-row">
                             <div class="item">
-                                <h3 class="item-title">Abitazioni <span>500K</span></h3>
+                                <h3 class="item-title">Tasse <span>500K</span></h3>
                                 <ul class="item-list half-height">
                                     <li><span>Elemento</span><span>valore</span></li>
                                     <li><span>Elemento</span><span>valore</span></li>
@@ -86,7 +89,7 @@
                                 </ul>
                             </div>
                             <div class="item">
-                                <h3 class="item-title">Abitazioni <span>500K</span></h3>
+                                <h3 class="item-title">Affitti <span>500K</span></h3>
                                 <ul class="item-list half-height">
                                     <li><span>Elemento</span><span>valore</span></li>
                                     <li><span>Elemento</span><span>valore</span></li>
