ottimizzato il wizard, migliorata gestione errori

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -330,7 +330,7 @@
         <div class="footer table">
             <div class="row">
                 <div class="cell">
-                    <a hef="#" class="button add">immobile</a>
+                    <button class="button add" (click)="goToWizard()">immobile</button>
                 </div>
             </div>
         </div>
